test/asm/symbol-override.asm
def V = 0
def V = 1
    PRINTLN "V={V}"

def W equ 1
def W = 0

rsset 1
def X rb 0
def X = 0

SECTION "Test", ROM0[1]
Y:
def Y = 0
